fixed some styling and alignment

--- a/src/components/CountryPicker/CountryPicker.module.css
+++ b/src/components/CountryPicker/CountryPicker.module.css
@@ -2,3 +2,9 @@
 	width: 30%;
 	margin-bottom: 30px !important
 }
+
+@media(max-width: 770px) {
+	.formControl {
+		width: 50%;
+	}
+}
